name:                pure-bloom-limiter
version:             0.8.0.0
homepage:            purehs.org/doc/pure-bloom-limiter
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-bloom-limiter.git

library
  build-depends:
    base,
    pure-bloom,
    pure-time,
    pure-txt,
    containers

  exposed-modules:
    Pure.Bloom.Limiter

  hs-source-dirs: src

  default-language: Haskell2010
